--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
-  </head>
+    <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/Styles.css" rel="stylesheet" />
+  </head> 
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+      <header>
+        <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
+        <nav>
+          <ul>
+              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="ShopWoman.html">Shop Woman</a></li>
+              <li><a href="ShopMen.html">Shop Men</a></li>
+              <li><a href="AboutUs.html">About Us</a></li>
+              <li><a href="Contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li><i class="far fa-user-circle"></i>Sign In</li>
+            <li><i class="far fa-heart"></i>Wishlist</li>
+            <li><i class="fas fa-shopping-bag"></i>Your Shoppingbag</li>
+          </ul>
+        </nav>
+      </header>
+    <main>
+        <section>
+        <div class="shopnow">
+          <a href="ShopWoman.html" class="shopnow">SHOP NOW</a>
+          <img src="images/Grid_homepage.png" alt="Shop Now button" />
+        </div>
+      </section>
+      <section>
+        <div>
+          <a href="ShopWoman.html" class="cta-Gray" >SHOP WOMAN</a>
+        </div>
+        <div class="shopwoman">
+          <img src="Images/ShopWoman.png" alt="Shop woman button" />
+        </div>
+        <div>
+          <a href="ShopMan.html" class="cta-Gray">SHOP MAN</a>
+        </div>
+        <div class="shopman">
+          <img src="Images/Shop Man.png" alt="Shop Man button" />
+        </div>
+      </section>
   </body>
+    </main>
+      <footer>Copyright &copy;</footer>
+
+     
 </html>
