--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <main>
         <section>
         <div class="shopnow">
-          <a href="ShopWoman.html" class="shopnow">SHOP NOW</a>
+          <a href="ShopWoman.html" class="shopnow-button">SHOP NOW</a>
           <img src="images/Grid_homepage.png" alt="Shop Now button" />
         </div>
       </section>
       <section>
         <div>
-          <a href="ShopWoman.html" class="cta-Gray" >SHOP WOMAN</a>
+          <a href="ShopWoman.html" class="cta-woman" >SHOP WOMAN</a>
         </div>
         <div class="shopwoman">
           <img src="Images/ShopWoman.png" alt="Shop woman button" />
         </div>
         <div>
-          <a href="ShopMan.html" class="cta-Gray">SHOP MAN</a>
+          <a href="ShopMan.html" class="cta-man">SHOP MAN</a>
         </div>
         <div class="shopman">
           <img src="Images/Shop Man.png" alt="Shop Man button" />
