--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/Styles.css" rel="stylesheet" />
   </head> 
-  <body>
-      <header>
+  <body class="wrapper">
+      <header class="header">
         <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
         <nav>
           <ul>
@@ -27,29 +27,26 @@
         </nav>
       </header>
     <main>
+      <section>
+        <div class="shopwoman"> 
+          <a href="ShopWoman.html" class="cta-woman" >SHOP WOMAN</a>
+          <img src="Images/ShopWoman.png" alt="Shop woman button" />
+        </div>
+        <div class="shopman">
+          <a href="ShopMan.html" class="cta-man">SHOP MAN</a>
+         <img src="Images/Shop Man.png" alt="Shop Man button" />
+        </div>
+      </section>      
         <section>
         <div class="shopnow">
           <a href="ShopWoman.html" class="shopnow-button">SHOP NOW</a>
           <img src="images/Grid_homepage.png" alt="Shop Now button" />
         </div>
       </section>
-      <section>
-        <div>
-          <a href="ShopWoman.html" class="cta-woman" >SHOP WOMAN</a>
-        </div>
-        <div class="shopwoman">
-          <img src="Images/ShopWoman.png" alt="Shop woman button" />
-        </div>
-        <div>
-          <a href="ShopMan.html" class="cta-man">SHOP MAN</a>
-        </div>
-        <div class="shopman">
-          <img src="Images/Shop Man.png" alt="Shop Man button" />
-        </div>
-      </section>
+      
   </body>
     </main>
-      <footer>Copyright &copy;</footer>
+      <footer></footer>
 
      
 </html>
