--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/Styles.css" rel="stylesheet" />
   </head> 
-  <body class="wrapper">
+  <body>
       <header class="header">
         <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
         <nav>
@@ -40,7 +40,7 @@
         <section>
         <div class="shopnow">
           <a href="ShopWoman.html" class="shopnow-button">SHOP NOW</a>
-          <img src="images/Grid_homepage.png" alt="Shop Now button" />
+          <img src="images/Grid_homepage.png" class="grid" alt="Shop Now button" />
         </div>
       </section>
       
