--- a/ShopMan.html
+++ b/ShopMan.html
@@ -4,6 +4,7 @@
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Shop our male collection now" />
     <link href="css/Styles.css" rel="stylesheet" />
   </head> 
   <body>
@@ -26,3 +27,103 @@
           </ul>
         </nav>
       </header>
+      <main>
+          <section class="JacketMale">
+              <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketMale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+          </section>
+      </main>
