--- a/ShopWoman.html
+++ b/ShopWoman.html
@@ -4,7 +4,8 @@
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/Styles.css" rel="stylesheet" />
+    <meta name="description" content="Shop our female collection now" />
+    <link href="css/Styles.css" rel="stylesheet"/>
   </head> 
   <body>
       <header class="header">
@@ -26,3 +27,103 @@
           </ul>
         </nav>
       </header>
+      <main>
+          <section class="JacketFemale">
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div>
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+          </section>
+      </main>
