--- a/ShopWoman.html
+++ b/ShopWoman.html
@@ -29,7 +29,15 @@
       </header>
       <main>
           <section class="JacketFemale">
-            <div>
+            <div class="jacket">
+                <h2>Comfort Zone Jacket Red</h2>
+                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
+                <p>$99,99</p>
+                <i class="far fa-heart"></i>
+                <i class="fas fa-shopping-bag" class="Shopping"></i>
+                <a href="Product.html" class="View">view</a>
+            </div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -37,7 +45,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -45,7 +53,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -53,7 +61,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -61,7 +69,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -69,7 +77,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -77,7 +85,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -85,7 +93,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -93,7 +101,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -101,7 +109,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
@@ -109,15 +117,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <a href="Product.html" class="View">view</a>
             </div>
-            <div>
-                <h2>Comfort Zone Jacket Red</h2>
-                <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
-                <p>$99,99</p>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-shopping-bag"></i>
-                <a href="Product.html" class="View">view</a>
-            </div>
-            <div>
+            <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
                 <img src="Images/JacketFemale.jpg" alt="Comfort Zone Jacket Red" />
                 <p>$99,99</p>
