--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul>
             <li><i class="far fa-user-circle"></i>Sign In</li>
             <li><i class="far fa-heart"></i>Wishlist</li>
-            <li><i class="fas fa-shopping-bag"></i>Your Shoppingbag</li>
+            <li><i class="fas fa-shopping-bag" class="Shopping"></i>Your Shoppingbag</li>
           </ul>
         </nav>
       </header>
