--- a/Product.html
+++ b/Product.html
@@ -4,6 +4,7 @@
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Product spesific page to show the choosen jacket" />
     <link href="css/Styles.css" rel="stylesheet" />
   </head> 
   <body>
@@ -26,3 +27,32 @@
           </ul>
         </nav>
       </header>
+      <main class="product-details">
+        <section>
+          <h1>Comfort Zone Jacket Red</h1>
+          <img src="Images/Prod1.jpg" alt="Comfort Zone Jacket Red" class="details" />
+          <div class="Prod234">
+            <img src="Images/Prod2.jpg" alt="Jacket details" class="details" />
+            <img src="Images/Prod3.jpg" alt="Jacket details" class="details" />
+            <img src="Images/Prod4.jpg" alt="Jacket details" class="details" />
+          </div>
+        </section>
+        <section class="info">
+          <p class="prod-info">Material </p>
+          <p class="prod-info">Product Info</p>
+          <p class="prod-info">Size guide</p>
+          <p class="choose">Color:</p>
+          <p class="choose">Choose Size</p>
+          <p class="Size">XS</p>
+          <p class="Size">S</p>
+          <p class="Size">M</p>
+          <p class="Size">L</p>
+        <div>
+          <i class="far fa-heart">Add to wishlist</i>
+        </div>
+        <div class="cta-cart">
+          <a href="checkout.html" class="cta-cart" >ADD TO CART</a>
+        </div>
+        </section>
+       
+      </main>
