--- a/ShopWoman.html
+++ b/ShopWoman.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
       </header>
-      <main>
+      <main class="container">
           <section class="JacketFemale">
             <div class="jacket">
                 <h2>Comfort Zone Jacket Red</h2>
