--- a/ShopWoman.html
+++ b/ShopWoman.html
@@ -19,7 +19,7 @@
               <li><a href="Contact.html">Contact</a></li>
           </ul>
         </nav>
-        <nav>
+        <nav class="personal">
           <ul>
             <li><i class="far fa-user-circle"></i>Sign In</li>
             <li><i class="far fa-heart"></i>Wishlist</li>
