--- a/AboutUs.html
+++ b/AboutUs.html
@@ -26,3 +26,17 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <section>
+          <div>
+            <img src="Images/About.jpg" alt="Team talking" class="aboutus" />
+          </div>
+          <div>
+            <h1>About Us</h1>
+            <h3>Our sogan is "pushing the comfort Zone" because we are firm believers that nothing bad ever comes out of challenging yourself.</h3>
+            <p>We are a Norwegian based online company specializing in men´s and woman´s rain jackets. Our jackets are mid-range priced and emphasize durability and being suitable for a range of different weather types ensuring costumers are comfertable whatever advemture they go on.</p>
+            <h3>We hope you would like to push the comfort zone with us!</h3>
+          </div>
+        </section>
+      </body>
+      </main>
