--- a/checkout.html
+++ b/checkout.html
@@ -26,3 +26,50 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <section>
+          <div class="img1">
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag" />
+          </div>
+          <div class="product1"></div>
+            <h3>Comfort Zone Jacket Red</h3>
+            <i class="fas fa-trash-alt"></i>
+            <p>Color: Red</p>
+            <p>Size: S</p>
+            <p>$99,99</p>
+          </div>
+          <div class="img2">
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag" />
+          </div>
+          <div class="product2">
+            <h3>Comfort Zone Jacket Red</h3>
+            <i class="fas fa-trash-alt"></i>
+            <p class="float">Color: Red</p>
+            <p class="float">Size: S</p>
+            <p class="float">$99,99</p>
+          </div>
+        </section>
+        <section class="order-summary">
+          <div class="summary">
+            <h3>Order Summary</h3>
+            <p class="total">Comfort Zone Jacket Yellow</p>
+            <p>$99,99</p>
+            <p class="total">Comfort Zone Jacket Yellow</p>
+            <p>$99,99</p>
+            <p class="total">Total:</p>
+            <p>$201,48</p>
+          </div>
+          <div class="payment">
+            <h2>Payment method</h2>
+            <i class="far fa-credit-card"></i>
+            <i class="fas fa-money-check-alt"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-apple-pay"></i>
+            <i class="fab fa-cc-paypal"></i>
+            <i class="fab fa-cc-visa"></i>
+          </div>
+          <div>
+            <a href="checkout.html" class="checkout">Proceed to checkout</a>
+          </div>
+        </section>
+      </main>
