--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,9 +33,13 @@
           </div>
           <div>
             <h1>About Us</h1>
-            <h3>Our sogan is "pushing the comfort Zone" because we are firm believers that nothing bad ever comes out of challenging yourself.</h3>
+          </div>
+          <div class="slogan">
+            <p>Our sogan is "pushing the comfort Zone" because we are firm believers that nothing bad ever comes out of challenging yourself.</p>
+          </div>
+          <div>
             <p>We are a Norwegian based online company specializing in men´s and woman´s rain jackets. Our jackets are mid-range priced and emphasize durability and being suitable for a range of different weather types ensuring costumers are comfertable whatever advemture they go on.</p>
-            <h3>We hope you would like to push the comfort zone with us!</h3>
+            <p class="slogan">We hope you would like to push the comfort zone with us!</p>
           </div>
         </section>
       </body>
