--- a/orderComplete.html
+++ b/orderComplete.html
@@ -26,3 +26,21 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <section>
+          <div class="confirmation">
+            <img src="Images/Order.png" alt="order successful" class="order" class="check" />
+            <h3>Your Order Was Successful!</h3>
+            <p>We will send you a confirmation email with your tracking number and further details</p>
+            <p>Thank you for choosing us!</p>
+          </div>
+          <div class="shopping">
+              <a href="index.html">Continue Shopping</a>
+          </div>
+          <div class="wishlist">
+              <a href="checkout.html">Continue to wishlist</a>
+          </div>
+        </section>
+          
+       
+      </main>
