--- a/AboutUs.html
+++ b/AboutUs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/Styles.css" rel="stylesheet" />
   </head> 
-  <body>
+  <body class="aubody">
       <header class="header">
         <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
         <nav>
@@ -26,7 +26,7 @@
           </ul>
         </nav>
       </header>
-      <main>
+      <main class="au">
         <section>
           <div>
             <img src="Images/About.jpg" alt="Team talking" class="aboutus" />
