--- a/Contact.html
+++ b/Contact.html
@@ -26,3 +26,33 @@
           </ul>
         </nav>
       </header>
+      <main class="cu">
+        <section>
+        <div>
+          <h1>Contact Us</h1>
+          <p>Need help? Maybe we already have the answer!</p>
+          <p>Common asked questions:</p>
+        </div>
+        <div class="questions">
+        <p>Our shipping policy</p>
+        <p>Not recieved your order?</p>
+        <p>Wrong shipping address?</p>
+        <p>Where can I track my order?</p>
+      </div>
+      <div class="cs">
+        <h2>Costumer service:</h2>
+      </div>
+      <div class="call">
+        <h2>Call us:</h2>
+        <p>You can call us on +41 22 33 44 55. Opening hours are monday to friday 10-18</p>
+      </div>
+      <div class="mail">
+        <h2>Email:</h2>
+        <p>You can send an email to rainydays@hotmail.com and we wil answer as quick as possible</p>
+      </div>
+      <div class="fb">
+        <h2>Facebook</h2>
+        <p>You are welcome to message us on Facebook anytime.</p>
+      </div>
+        </section>
+      </main>
