--- a/checkout.html
+++ b/checkout.html
@@ -26,10 +26,10 @@
           </ul>
         </nav>
       </header>
-      <main>
+      <main class="co">
         <section>
           <div class="img1">
-            <img src="Images/Prod1.jpg" alt="Product in shopping bag" />
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag"class="img1" />
           </div>
           <div class="product1"></div>
             <h3>Comfort Zone Jacket Red</h3>
@@ -39,7 +39,7 @@
             <p>$99,99</p>
           </div>
           <div class="img2">
-            <img src="Images/Prod1.jpg" alt="Product in shopping bag" />
+            <img src="Images/Prod1.jpg" alt="Product in shopping bag" class="img2" />
           </div>
           <div class="product2">
             <h3>Comfort Zone Jacket Red</h3>
@@ -69,7 +69,8 @@
             <i class="fab fa-cc-visa"></i>
           </div>
           <div>
-            <a href="checkout.html" class="checkout">Proceed to checkout</a>
+            <a href="orderComplete.html" class="checkout">Proceed to checkout</a>
           </div>
         </section>
       </main>
+      </body>
