--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
       </header>
-    <main>
+    <main class="home">
       <section>
         <div class="shopwoman"> 
           <a href="ShopWoman.html" class="cta-woman" >SHOP WOMAN</a>
