--- a/orderComplete.html
+++ b/orderComplete.html
@@ -26,8 +26,8 @@
           </ul>
         </nav>
       </header>
-      <main>
-        <section>
+      <main class="oc">
+        <section class="center">
           <div class="confirmation">
             <img src="Images/Order.png" alt="order successful" class="order" class="check" />
             <h3>Your Order Was Successful!</h3>
@@ -41,6 +41,23 @@
               <a href="checkout.html">Continue to wishlist</a>
           </div>
         </section>
-          
+        <section class="recommended">
+          <h2>Recommended for you</h2>
+          <div>
+            <img src="Images/recommended.jpg" alt="recommended for you" />
+          </div>
+          <div>
+            <img src="Images/recommended.jpg" alt="recommended for you" />
+          </div>
+          <div>
+            <img src="Images/recommended.jpg" alt="recommended for you" />
+          </div>
+          <div>
+            <img src="Images/recommended.jpg" alt="recommended for you" />
+          </div>
+          <div>
+            <img src="Images/recommended.jpg" alt="recommended for you" />
+          </div>
+        </section>  
        
       </main>
