--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="ShopWoman.html">Shop Woman</a></li>
-              <li><a href="ShopMen.html">Shop Men</a></li>
+              <li><a href="ShopMan.html">Shop Men</a></li>
               <li><a href="AboutUs.html">About Us</a></li>
               <li><a href="Contact.html">Contact</a></li>
           </ul>
@@ -22,7 +22,7 @@
           <ul>
             <li><i class="far fa-user-circle"></i>Sign In</li>
             <li><i class="far fa-heart"></i>Wishlist</li>
-            <li><i class="fas fa-shopping-bag" class="Shopping"></i>Your Shoppingbag</li>
+            <li> <a href="checkout.html"><i class="fas fa-shopping-bag" class="Shopping"></i>Your Shoppingbag</a></li>
           </ul>
         </nav>
       </header>
