--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <script src="https://kit.fontawesome.com/f009722376.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
     <link href="css/Styles.css" rel="stylesheet" />
+    <!-- Hotjar Tracking Code for https://brave-bhabha-65999c.netlify.app/ -->
+  <script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2887431,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
   </head> 
   <body>
       <header class="header">
         <img src="images/Rainydays_Logo.png" alt="The Rainydays Logo" class="Logo"/>
-        <nav>
+        <nav class="flex">
           <ul>
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="ShopWoman.html">Shop Woman</a></li>
