--- a/Contact.html
+++ b/Contact.html
@@ -62,10 +62,38 @@
         <h2>Email:</h2>
         <p>You can send an email to rainydays@hotmail.com and we wil answer as quick as possible</p>
       </div>
+      <div>
+        <h2>Send us a Direct Message and we will contact you!</h2>
+      </div>
+      <form id="form">
+      <div>
+        <label>
+          Full Name
+        <input name="fullname" id="name" placeholder="Full Name"/>
+      </label>
+      </div>
+      <div>
+        <label>
+          Email (required)*
+          <input name="email" id="email" placeholder="Email"/>
+        </label>
+        <div class="error" id="emailErr">Please enter your correct Email Address</div>
+      </div>
+      <div>
+        <label>
+          Message
+        <input name="Message" id="message" placeholder="Message"/>
+      </label>
+      </div>
+      
+        <button>Submit</button>
+
+    </form>
       <div class="fb">
         <h2>Facebook</h2>
         <p>You are welcome to message us on Facebook anytime.</p>
       </div>
         </section>
       </main>
+      <script src="js/script.js"></script>
       </body>
