--- a/ShopMan.html
+++ b/ShopMan.html
@@ -35,7 +35,7 @@
           <ul>
             <li><i class="far fa-user-circle"></i>Sign In</li>
             <li><i class="far fa-heart"></i>Wishlist</li>
-            <li> <a href="checkout.html"><i class="fas fa-shopping-bag" class="Shopping"></i>Your Shoppingbag</a></li>
+            <li> <a href="checkout.html"><i class="fas fa-shopping-bag" class="Shopping"><span class="counter"></span></i>Your Shoppingbag</a></li>
           </ul>
         </nav>
       </header>
