--- a/Product.html
+++ b/Product.html
@@ -69,7 +69,7 @@
           <button class="heart"><i class="far fa-heart">Add to wishlist</i></button>
         </div>
         <div class="cta-cart">
-          <a href="checkout.html" class="cta-cart" >ADD TO CART</a>
+          <a class="cta-cart" >ADD TO CART</a>
         </div>
         </section>
        
