--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <img src="images/Grid_homepage.png" class="grid" alt="Shop Now button" />
         </div>
       </section>
-    </main>  
+    </main> 
+    <script src="js/heart.js"></script> 
   </body>
 </html>
