--- a/Contact.html
+++ b/Contact.html
@@ -95,5 +95,6 @@
       </div>
         </section>
       </main>
+      <script src="js/heart.js"></script>
       <script src="js/script.js"></script>
       </body>
